added build commands

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todoapp",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://Jasvanth-Hub.github.io/New-To-do-Application",
   "private": true,
   "version": "0.0.0",
   "type": "module",
